Add donwload session test cases

--- a/TftpSharp/TftpSharp.csproj
+++ b/TftpSharp/TftpSharp.csproj
@@ -5,4 +5,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<InternalsVisibleTo Include="TftpSharp.Tests" />
+		<InternalsVisibleTo Include="DynamicProxyGenAssembly2"/>
+	</ItemGroup>
+
 </Project>
